# targets

./: Cargo.toml
bincode/: Cargo.toml  read_bytes.rs
cbor/: Cargo.toml  read_cbor.rs
