[workspace]
members = [
    "brotli",
    "bson",
    "cbor",
    "chrono",
    "crypto-hashes",
    "cssparser",
    "deflate",
    "dns-parser",
    "encoding_rs",
    "flac",
    "httparse",
    "image",
    "lz4-compress",
    "mp4parse",
    "pulldown-cmark",
    "quick-xml",
    "regex",
    "rustfmt",
    "serde_json",
    "serde_yaml",
    "tar",
    "toml",
    "uuid",
    "xml-rs",
    "zopfli",
]
